// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should change page 1`] = `
<div>
  <ul
    class="pagination"
  >
    <li
      class="item"
    >
      1
    </li>
    <li
      class="item"
    >
      2
    </li>
    <li
      class="item"
    >
      3
    </li>
    <li
      class="item active"
    >
      4
    </li>
    <li
      class="item"
    >
      5
    </li>
  </ul>
</div>
`;

exports[`Pagination should render 1`] = `
<div>
  <ul
    class="pagination"
  />
</div>
`;
